--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "uuid": "^7.0.3",
     "css-loader": "^3.5.2",
     "html-webpack-plugin": "^4.2.0",
     "node-sass": "^4.13.1",
