--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
-    "uuid": "^7.0.3",
+    "core-js": "^3.6.5",
     "css-loader": "^3.5.2",
     "html-webpack-plugin": "^4.2.0",
     "node-sass": "^4.13.1",
@@ -22,12 +22,15 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.5",
     "sass-loader": "^8.0.2",
+    "uuid": "^7.0.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "redux-saga": "^1.1.3",
     "style-loader": "^1.1.4"
   }
 }
