--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --open",
+    "start": "webpack-dev-server --inspect --hot --open",
     "build": "webpack --config webpack.config.js --mode production"
   },
   "author": "Jaz",
